feat: update recipes for react app

--- a/packages/ng-calculator/src/app/calculator/calculator.component.html
+++ b/packages/ng-calculator/src/app/calculator/calculator.component.html
@@ -138,7 +138,7 @@
 
         <div class="ml-md-4" formGroupName="extraDeduction">
           <mat-form-field appearance="standard" style="width: 120px">
-            <mat-label>子女教育(当月)</mat-label>
+            <mat-label>子女教育</mat-label>
             <input
               matInput
               type="number"
@@ -170,7 +170,7 @@
             appearance="standard"
             style="width: 120px"
           >
-            <mat-label>继续教育(当月)</mat-label>
+            <mat-label>继续教育</mat-label>
             <input
               matInput
               type="number"
@@ -201,7 +201,7 @@
             appearance="standard"
             style="width: 120px"
           >
-            <mat-label>大病医疗(当月)</mat-label>
+            <mat-label>大病医疗</mat-label>
             <input
               matInput
               type="number"
@@ -217,7 +217,7 @@
             appearance="standard"
             style="width: 120px"
           >
-            <mat-label>住房贷款利息(当月)</mat-label>
+            <mat-label>住房贷款利息</mat-label>
             <input
               matInput
               type="number"
@@ -251,7 +251,7 @@
             appearance="standard"
             style="width: 120px"
           >
-            <mat-label>住房租金(当月)</mat-label>
+            <mat-label>住房租金</mat-label>
             <input
               matInput
               type="number"
@@ -286,7 +286,7 @@
             appearance="standard"
             style="width: 120px"
           >
-            <mat-label>赡养老人(当月)</mat-label>
+            <mat-label>赡养老人</mat-label>
             <input
               matInput
               type="number"
