--- a/packages/ng-calculator/src/app/help-info/help-info.component.html
+++ b/packages/ng-calculator/src/app/help-info/help-info.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>使用指南</h1>
 
-<article mat-dialog-content>
+<article mat-dialog-content class="mat-typography">
   <h2>基本声明</h2>
 
   <p>本计算器目前只针对普通工薪阶层的收入计算有效，其他报酬类暂不支持。</p>
