--- a/packages/ng-calculator/src/app/navbar/navbar.component.html
+++ b/packages/ng-calculator/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar-header" aria-label="Top Toolbar">
   <a mat-button class="docs-button">
-    <mat-icon svgIcon="calculator"></mat-icon>
+    <mat-icon size="large" svgIcon="calculator"></mat-icon>
     <span>Calculator</span>
   </a>
 
