--- a/packages/ng-calculator/src/_app-theme.scss
+++ b/packages/ng-calculator/src/_app-theme.scss
@@ -1,6 +1,7 @@
 @use "@angular/material" as mat;
 @use "sass:map";
 
+@import "./styles/variable";
 @import "app/navbar/navbar-theme";
 @import "app/calculator/calculator-theme";
 
@@ -17,7 +18,19 @@
   @include calculator-theme($theme);
 }
 
+$app-typography: mat.define-typography-config(
+  $font-family: $font-family,
+);
+
 // Define the light theme.
 $mat-primary: mat.define-palette(mat.$indigo-palette);
 $mat-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-$mat-theme: mat.define-light-theme($mat-primary, $mat-accent);
+$mat-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $mat-primary,
+      accent: $mat-accent,
+    ),
+    typography: $app-typography,
+  )
+);
