--- a/packages/ng-calculator/src/app/navbar/navbar.component.scss
+++ b/packages/ng-calculator/src/app/navbar/navbar.component.scss
@@ -4,7 +4,14 @@
   align-items: center;
   padding: 8px 16px;
 
-  > .mat-button {
+  > .mat-mdc-button {
+    color: inherit;
+
+    .mat-icon {
+      width: 24px;
+      height: 24px;
+    }
+
     &:last-child {
       margin-left: auto;
     }
