--- a/packages/ng-calculator/src/styles/_general.scss
+++ b/packages/ng-calculator/src/styles/_general.scss
@@ -1,3 +1,5 @@
+@import "variable";
+
 html,
 body {
   width: 100%;
@@ -5,8 +7,7 @@ body {
 }
 
 body {
-  font-family: Roboto, "Helvetica Neue Light", "Helvetica Neue", Helvetica,
-    Arial, "Lucida Grande", sans-serif;
+  font-family: $font-family;
   margin: 0;
   border-top: 1px solid white;
 }
