feat: upgrade angular material 16

--- a/packages/ng-calculator/src/app/calculator/calculator.component.scss
+++ b/packages/ng-calculator/src/app/calculator/calculator.component.scss
@@ -26,6 +26,7 @@ mat-mdc-card-header {
 
 .summary {
   --mdc-list-list-item-supporting-text-color: rgb(0 0 0 / 87%);
+  --mdc-list-list-item-leading-icon-color: rgb(0 0 0 / 87%);
 
   display: flex;
   flex-wrap: wrap;
