feat: upgrade angular material v18

--- a/packages/ng-calculator/src/app/calculator/_calculator-theme.scss
+++ b/packages/ng-calculator/src/app/calculator/_calculator-theme.scss
@@ -10,7 +10,7 @@
 
   .summary {
     .figure {
-      color: mat.get-color-from-palette($primary);
+      color: mat.m2-get-color-from-palette($primary);
     }
   }
 }
