--- a/packages/ng-calculator/src/_app-theme.scss
+++ b/packages/ng-calculator/src/_app-theme.scss
@@ -12,20 +12,20 @@
   $warn: map.get($theme, warn);
   $background: map.get($theme, background);
   $foreground: map.get($theme, foreground);
-  $next-theme: mat.define-palette(mat.$red-palette);
+  $next-theme: mat.m2-define-palette(mat.$m2-red-palette);
 
   @include nav-bar-theme($theme);
   @include calculator-theme($theme);
 }
 
-$app-typography: mat.define-typography-config(
+$app-typography: mat.m2-define-typography-config(
   $font-family: $font-family,
 );
 
 // Define the light theme.
-$mat-primary: mat.define-palette(mat.$indigo-palette);
-$mat-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-$mat-theme: mat.define-light-theme(
+$mat-primary: mat.m2-define-palette(mat.$m2-indigo-palette);
+$mat-accent: mat.m2-define-palette(mat.$m2-pink-palette, A200, A100, A400);
+$mat-theme: mat.m2-define-light-theme(
   (
     color: (
       primary: $mat-primary,
