--- a/packages/ng-calculator/src/app/calculator/calculator.component.html
+++ b/packages/ng-calculator/src/app/calculator/calculator.component.html
@@ -1,8 +1,8 @@
 <mat-card appearance="outlined">
   <mat-card-header
-    class="d-flex justify-content-between align-items-center flex-wrap ml-0"
+    class="d-flex justify-content-between align-items-center flex-wrap mb-2"
   >
-    <mat-card-title class="mb-0">基础信息</mat-card-title>
+    <mat-card-title>基础信息</mat-card-title>
 
     <div class="d-flex align-items-center flex-wrap my-2 my-md-0">
       <mat-slide-toggle
@@ -36,7 +36,7 @@
     </div>
   </mat-card-header>
 
-  <mat-card-content class="mb-0">
+  <mat-card-content class="pt-2">
     <form class="form-basic-data" [formGroup]="baseForm">
       <div class="row">
         <mat-form-field class="col-12 col-md-3" appearance="outline">
