--- a/packages/ng-calculator/src/app/navbar/_navbar-theme.scss
+++ b/packages/ng-calculator/src/app/navbar/_navbar-theme.scss
@@ -9,11 +9,11 @@
   $foreground: map.get($theme, foreground);
 
   app-navbar {
-    color: mat.get-color-from-palette($primary, default-contrast);
+    color: mat.m2-get-color-from-palette($primary, default-contrast);
 
     .navbar,
     .navbar-header {
-      background: mat.get-color-from-palette($primary);
+      background: mat.m2-get-color-from-palette($primary);
     }
   }
 }
