--- a/packages/ng-calculator/src/app/calculator/calculator.component.scss
+++ b/packages/ng-calculator/src/app/calculator/calculator.component.scss
@@ -37,6 +37,11 @@ mat-mdc-card-header {
   }
 }
 
+.chart-container {
+  width: 100%;
+  height: 400px;
+}
+
 .summary mat-list-item {
   overflow: hidden;
   flex: 50% 0 0;
