--- a/packages/ng-calculator/src/app/calculator/calculator.component.html
+++ b/packages/ng-calculator/src/app/calculator/calculator.component.html
@@ -119,10 +119,7 @@
             </mat-autocomplete>
           </mat-form-field>
 
-          <mat-form-field
-            class="ml-3"
-            style="width: 150px"
-          >
+          <mat-form-field class="ml-3" style="width: 150px">
             <mat-label>公积金个人缴纳比例</mat-label>
             <input
               matInput
@@ -164,10 +161,7 @@
             </mat-autocomplete>
           </mat-form-field>
 
-          <mat-form-field
-            class="ml-3"
-            style="width: 120px"
-          >
+          <mat-form-field class="ml-3" style="width: 120px">
             <mat-label>继续教育</mat-label>
             <input
               matInput
@@ -190,14 +184,12 @@
                   trackBy: trackByValue
                 "
                 [value]="item.value"
-              >{{ item.label }}</mat-option>
+                >{{ item.label }}</mat-option
+              >
             </mat-autocomplete>
           </mat-form-field>
 
-          <mat-form-field
-            class="ml-3"
-            style="width: 120px"
-          >
+          <mat-form-field class="ml-3" style="width: 120px">
             <mat-label>大病医疗</mat-label>
             <input
               matInput
@@ -209,10 +201,7 @@
             <span matTextSuffix>元</span>
           </mat-form-field>
 
-          <mat-form-field
-            class="ml-3"
-            style="width: 120px"
-          >
+          <mat-form-field class="ml-3" style="width: 120px">
             <mat-label>住房贷款利息</mat-label>
             <input
               matInput
@@ -238,14 +227,12 @@
                   trackBy: trackByValue
                 "
                 [value]="item.value"
-              >{{ item.label }}</mat-option>
+                >{{ item.label }}</mat-option
+              >
             </mat-autocomplete>
           </mat-form-field>
 
-          <mat-form-field
-            class="ml-3"
-            style="width: 120px"
-          >
+          <mat-form-field class="ml-3" style="width: 120px">
             <mat-label>住房租金</mat-label>
             <input
               matInput
@@ -272,14 +259,12 @@
                   trackBy: trackByValue
                 "
                 [value]="item.value"
-              >{{ item.label }}</mat-option>
+                >{{ item.label }}</mat-option
+              >
             </mat-autocomplete>
           </mat-form-field>
 
-          <mat-form-field
-            class="ml-3"
-            style="width: 120px"
-          >
+          <mat-form-field class="ml-3" style="width: 120px">
             <mat-label>赡养老人</mat-label>
             <input
               matInput
@@ -299,14 +284,12 @@
                   trackBy: trackByValue
                 "
                 [value]="item.value"
-              >{{ item.label }}</mat-option>
+                >{{ item.label }}</mat-option
+              >
             </mat-autocomplete>
           </mat-form-field>
 
-          <mat-form-field
-            class="ml-3"
-            style="width: 120px"
-          >
+          <mat-form-field class="ml-3" style="width: 120px">
             <mat-label>企业年金个人缴纳金额</mat-label>
             <input
               matInput
@@ -318,10 +301,7 @@
             <span matTextSuffix>元</span>
           </mat-form-field>
 
-          <mat-form-field
-            class="ml-3"
-            style="width: 120px"
-          >
+          <mat-form-field class="ml-3" style="width: 120px">
             <mat-label>企业年金公司缴纳金额</mat-label>
             <input
               matInput
@@ -333,10 +313,7 @@
             <span matTextSuffix>元</span>
           </mat-form-field>
 
-          <mat-form-field
-            class="ml-3"
-            style="width: 120px"
-          >
+          <mat-form-field class="ml-3" style="width: 120px">
             <mat-label>其他扣除项</mat-label>
             <input
               matInput
@@ -364,10 +341,7 @@
             <span matTextSuffix>%</span>
           </mat-form-field>
 
-          <mat-form-field
-            class="ml-3"
-            style="width: 120px"
-          >
+          <mat-form-field class="ml-3" style="width: 120px">
             <mat-label>医疗保险个人缴纳比例</mat-label>
             <input
               matInput
@@ -379,10 +353,7 @@
             <span matTextSuffix>%</span>
           </mat-form-field>
 
-          <mat-form-field
-            class="ml-3"
-            style="width: 120px"
-          >
+          <mat-form-field class="ml-3" style="width: 120px">
             <mat-label>失业保险个人缴纳比例</mat-label>
             <input
               matInput
@@ -436,10 +407,14 @@
     class="col-md-6 col-sm-12 mb-4 mb-md-0"
     *ngIf="!clear && (monthlyIncomes$ | async) as incomeList"
   >
-    <mat-accordion [@listAnimation]="incomeList.length" (animationend)="scrollToSummary()">
+    <mat-accordion
+      [@listAnimation]="incomeList.length"
+      (animationend)="scrollToChart()"
+    >
       <mat-expansion-panel
         *ngFor="let item of incomeList; let idx = index; trackBy: trackIncome"
         #panel
+        (opened)="changeChartMonth(idx)"
       >
         <mat-expansion-panel-header>
           {{ item.actualMonth - 1 | month }} 实收：
@@ -464,6 +439,44 @@
   </div>
 
   <div class="col-md-6">
+    <!-- 月薪扣除饼图卡片 -->
+    <mat-card
+      #chart
+      appearance="outlined"
+      class="calc-result mb-4"
+      *ngIf="!clear && (deductionChartOption | async) as chartOption"
+    >
+      <mat-card-header
+        class="d-flex justify-content-between align-items-center"
+      >
+        <mat-card-title>月薪扣除项分析</mat-card-title>
+        <mat-form-field
+          class="dense-xs"
+          appearance="outline"
+          style="width: 150px"
+        >
+          <mat-label>月份</mat-label>
+          <mat-select
+            [value]="selectedMonthIndex$ | async"
+            (selectionChange)="changeChartMonth($event.value)"
+          >
+            <mat-option *ngFor="let m of months; let i = index" [value]="i">
+              {{ m }}月
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </mat-card-header>
+      <mat-card-content>
+        <div
+          echarts
+          [options]="chartOption"
+          class="chart-container"
+          style="height: 400px; width: 100%"
+        ></div>
+      </mat-card-content>
+    </mat-card>
+
+    <!-- 汇总卡片 -->
     <mat-card
       appearance="outlined"
       class="calc-result"
@@ -474,7 +487,9 @@
         <mat-list-item>
           <mat-icon matListItemIcon>money</mat-icon>
           <div matListItemLine>全年账面薪资收入</div>
-          <div matListItemLine class="figure">{{ sum.bookSalary | currency }}</div>
+          <div matListItemLine class="figure">
+            {{ sum.bookSalary | currency }}
+          </div>
         </mat-list-item>
         <mat-list-item>
           <mat-icon matListItemIcon>money</mat-icon>
@@ -493,12 +508,16 @@
         <mat-list-item>
           <mat-icon matListItemIcon>monetization_on</mat-icon>
           <div matListItemLine>全年预缴税额</div>
-          <div matListItemLine class="figure">{{ sum.prepaidTax | currency }}</div>
+          <div matListItemLine class="figure">
+            {{ sum.prepaidTax | currency }}
+          </div>
         </mat-list-item>
         <mat-list-item>
           <mat-icon matListItemIcon>monetization_on</mat-icon>
           <div matListItemLine>全年个人综合所得税额</div>
-          <div matListItemLine class="figure">{{ sum.theoreticalTax | currency }}</div>
+          <div matListItemLine class="figure">
+            {{ sum.theoreticalTax | currency }}
+          </div>
         </mat-list-item>
         <mat-list-item>
           <mat-icon matListItemIcon>monetization_on</mat-icon>
@@ -511,11 +530,15 @@
         <mat-list-item>
           <mat-icon matListItemIcon>savings</mat-icon>
           <div matListItemLine>全年税后收入</div>
-          <div matListItemLine class="figure">{{ sum.taxedIncome | currency }}</div>
+          <div matListItemLine class="figure">
+            {{ sum.taxedIncome | currency }}
+          </div>
         </mat-list-item>
         <mat-list-item>
           <mat-icon matListItemIcon>savings</mat-icon>
-          <div matListItemLine>全年税后收入（非合并 - {{ nonMergeTaxCalculationEndDate }}止）</div>
+          <div matListItemLine>
+            全年税后收入（非合并 - {{ nonMergeTaxCalculationEndDate }}止）
+          </div>
           <div matListItemLine class="figure">
             {{ sum.taxedIncomeDeprecated | currency }}
           </div>
@@ -524,12 +547,16 @@
         <mat-list-item>
           <mat-icon matListItemIcon>savings</mat-icon>
           <div matListItemLine>全年现金收入</div>
-          <div matListItemLine class="figure">{{ sum.cashIncome | currency }}</div>
+          <div matListItemLine class="figure">
+            {{ sum.cashIncome | currency }}
+          </div>
         </mat-list-item>
 
         <mat-list-item>
           <mat-icon matListItemIcon>savings</mat-icon>
-          <div matListItemLine>全年现金收入（非合并 - {{ nonMergeTaxCalculationEndDate }}止）</div>
+          <div matListItemLine>
+            全年现金收入（非合并 - {{ nonMergeTaxCalculationEndDate }}止）
+          </div>
           <div matListItemLine class="figure">
             {{ sum.cashIncomeDeprecated | currency }}
           </div>
@@ -545,7 +572,9 @@
 
         <mat-list-item>
           <mat-icon matListItemIcon>savings</mat-icon>
-          <div matListItemLine>全年综合货币收入（非合并 - {{ nonMergeTaxCalculationEndDate }}止）</div>
+          <div matListItemLine>
+            全年综合货币收入（非合并 - {{ nonMergeTaxCalculationEndDate }}止）
+          </div>
           <div matListItemLine class="figure">
             {{ sum.cashIncomeDeprecated + sum.fullHousingFund | currency }}
           </div>
@@ -845,21 +874,23 @@
     </div>
 
     <p>
-      个人三险总费：{{ income.insuranceFullCost | number: "0.0-3" }}， 社保：{{
-        income.insuranceCosts.endowment | number: "0.0-3"
-      }}， 医保：{{ income.insuranceCosts.health | number: "0.0-3" }}， 失业：{{
-        income.insuranceCosts.unemployment | number: "0.0-3"
-      }}
+      个人三险总费：{{ income.insuranceFullCost | number : "0.0-3" }}， 社保：{{
+        income.insuranceCosts.endowment | number : "0.0-3"
+      }}， 医保：{{ income.insuranceCosts.health | number : "0.0-3" }}，
+      失业：{{ income.insuranceCosts.unemployment | number : "0.0-3" }}
     </p>
     <p>
-      公司五险总费：{{ income.employerCosts.insuranceFull | number: "0.0-3" }}，
-      社保：{{ income.employerCosts.insurance.endowment | number: "0.0-3" }}，
-      医保：{{ income.employerCosts.insurance.health | number: "0.0-3" }}，
-      失业：{{
-        income.employerCosts.insurance.unemployment | number: "0.0-3"
+      公司五险总费：{{
+        income.employerCosts.insuranceFull | number : "0.0-3"
+      }}， 社保：{{
+        income.employerCosts.insurance.endowment | number : "0.0-3"
+      }}， 医保：{{
+        income.employerCosts.insurance.health | number : "0.0-3"
+      }}， 失业：{{
+        income.employerCosts.insurance.unemployment | number : "0.0-3"
       }}， 工伤：{{
-        income.employerCosts.insurance.occupationalInjury | number: "0.0-3"
-      }}， 生育：{{ income.employerCosts.insurance.birth | number: "0.0-3" }}
+        income.employerCosts.insurance.occupationalInjury | number : "0.0-3"
+      }}， 生育：{{ income.employerCosts.insurance.birth | number : "0.0-3" }}
     </p>
 
     <div class="mr-3 d-flex justify-content-end">
