--- a/packages/ng-calculator/src/app/calculator/summary-charts/summary-charts.component.scss
+++ b/packages/ng-calculator/src/app/calculator/summary-charts/summary-charts.component.scss
@@ -2,11 +2,13 @@
 @import "node_modules/bootstrap/scss/mixins";
 @import "node_modules/bootstrap/scss/variables";
 
-:host {
-  display: block;
+.chart-container {
+  width: 100%;
+  height: 400px;
 }
 
-.divider {
-  height: 50%;
-  margin-top: 25%;
+@include media-breakpoint-down(sm) {
+  .calc-result {
+    padding: 0;
+  }
 }
