fix: recover the scroll behavior

--- a/packages/ng-calculator/src/app/calculator/calculator.component.html
+++ b/packages/ng-calculator/src/app/calculator/calculator.component.html
@@ -16,6 +16,7 @@
     [monthlyIncomes$]="monthlyIncomes$"
     [monthlyMetas$]="monthlyMetas$"
     [cityRecipe]="cityRecipe"
+    [scroll$]="scroll$"
     (updateMeta)="updateMeta($event.meta, $event.index)"
     (changeChartMonth)="changeChartMonth($event)"
   ></app-monthly-results>
@@ -26,6 +27,7 @@
       [monthlyIncomes$]="monthlyIncomes$"
       [summary$]="summary$"
       [selectedMonthIndex$]="selectedMonthIndex$"
+      [scroll$]="scroll$"
       (changeChartMonth)="changeChartMonth($event)"
     ></app-summary-charts>
 
