--- a/packages/ng-calculator/src/app/calculator/calculator.component.html
+++ b/packages/ng-calculator/src/app/calculator/calculator.component.html
@@ -26,7 +26,7 @@
       [clear]="clear"
       [monthlyIncomes$]="monthlyIncomes$"
       [summary$]="summary$"
-      [selectedMonthIndex$]="selectedMonthIndex$"
+      [selectedMonth$]="selectedMonth$"
       [scroll$]="scroll$"
       (changeChartMonth)="changeChartMonth($event)"
     ></app-summary-charts>
