--- a/packages/ng-calculator/src/app/calculator/summary-details/summary-details.component.scss
+++ b/packages/ng-calculator/src/app/calculator/summary-details/summary-details.component.scss
@@ -20,6 +20,10 @@
   flex: 50% 0 0;
 }
 
+::ng-deep .summary-tooltip .mdc-tooltip__surface {
+  max-width: unset;
+}
+
 @include media-breakpoint-down(sm) {
   .calc-result {
     padding: 0;
