--- a/packages/ng-calculator/src/app/calculator/summary-details/summary-details.component.html
+++ b/packages/ng-calculator/src/app/calculator/summary-details/summary-details.component.html
@@ -5,7 +5,7 @@
   *ngIf="!clear && (summary$ | async) as sum"
 >
   <mat-list class="summary">
-    <mat-list-item>
+    <mat-list-item matTooltip="全年账面薪资收入 = 每月薪资总和" matTooltipClass="summary-tooltip" matTooltipPosition="above" matTooltipShowDelay="300">
       <mat-icon matListItemIcon>money</mat-icon>
       <div matListItemLine>全年账面薪资收入</div>
       <div matListItemLine class="figure">
@@ -19,43 +19,43 @@
         {{ sum.bonus | currency }} ({{ sum.bonusTax | currency }})
       </div>
     </mat-list-item>
-    <mat-list-item>
+    <mat-list-item matTooltip="全年公积金缴纳金额 = 每月公积金缴纳金额总和" matTooltipClass="summary-tooltip" matTooltipPosition="above" matTooltipShowDelay="300">
       <mat-icon matListItemIcon>redeem</mat-icon>
       <div matListItemLine>全年公积金缴纳金额</div>
       <div matListItemLine class="figure">
         {{ sum.fullHousingFund | currency }}
       </div>
     </mat-list-item>
-    <mat-list-item>
+    <mat-list-item matTooltip="全年预缴税额 = 每月预缴税额总和" matTooltipClass="summary-tooltip" matTooltipPosition="above" matTooltipShowDelay="300">
       <mat-icon matListItemIcon>monetization_on</mat-icon>
       <div matListItemLine>全年预缴税额</div>
       <div matListItemLine class="figure">
         {{ sum.prepaidTax | currency }}
       </div>
     </mat-list-item>
-    <mat-list-item>
+    <mat-list-item matTooltip="全年个人综合所得税额 = 整体计算税额(全年账面薪资收入 + 全年一次性奖金收入)" matTooltipClass="summary-tooltip" matTooltipPosition="above" matTooltipShowDelay="300">
       <mat-icon matListItemIcon>monetization_on</mat-icon>
       <div matListItemLine>全年个人综合所得税额</div>
       <div matListItemLine class="figure">
         {{ sum.theoreticalTax | currency }}
       </div>
     </mat-list-item>
-    <mat-list-item>
+    <mat-list-item matTooltip="全年个人综合所得税额（分开计算） = 全年预缴税额 + 单独计算税额(全年一次性奖金收入)" matTooltipClass="summary-tooltip" matTooltipPosition="above" matTooltipShowDelay="300">
       <mat-icon matListItemIcon>monetization_on</mat-icon>
-      <div matListItemLine>全年个人综合所得税额（单独计算）</div>
+      <div matListItemLine>全年个人综合所得税额（分开计算）</div>
       <div matListItemLine class="figure">
         {{ sum.totalSeparatedTax | currency }}
       </div>
     </mat-list-item>
 
-    <mat-list-item>
+    <mat-list-item matTooltip="全年税后收入 = 全年账面薪资收入 + 全年一次性奖金收入 - 全年个人综合所得税额" matTooltipClass="summary-tooltip" matTooltipPosition="above" matTooltipShowDelay="300">
       <mat-icon matListItemIcon>savings</mat-icon>
       <div matListItemLine>全年税后收入</div>
       <div matListItemLine class="figure">
         {{ sum.taxedIncome | currency }}
       </div>
     </mat-list-item>
-    <mat-list-item>
+    <mat-list-item matTooltip="全年税后收入（非合并） = 全年账面薪资收入 + 全年一次性奖金收入 - 全年个人综合所得税额（分开计算）" matTooltipClass="summary-tooltip" matTooltipPosition="above" matTooltipShowDelay="300">
       <mat-icon matListItemIcon>savings</mat-icon>
       <div matListItemLine>
         全年税后收入（非合并 - {{ nonMergeTaxCalculationEndDate }}止）
@@ -65,7 +65,7 @@
       </div>
     </mat-list-item>
 
-    <mat-list-item>
+    <mat-list-item matTooltip="全年现金收入 = 全年税后收入 - 全年社保个人缴纳总额 - 全年公积金个人缴纳总额 - 全年企业年金个人缴纳总额" matTooltipClass="summary-tooltip" matTooltipPosition="above" matTooltipShowDelay="300">
       <mat-icon matListItemIcon>savings</mat-icon>
       <div matListItemLine>全年现金收入</div>
       <div matListItemLine class="figure">
@@ -73,7 +73,7 @@
       </div>
     </mat-list-item>
 
-    <mat-list-item>
+    <mat-list-item matTooltip="全年现金收入（非合并） = 全年税后收入（非合并） - 全年社保个人缴纳总额 - 全年公积金个人缴纳总额 - 全年企业年金个人缴纳总额" matTooltipClass="summary-tooltip" matTooltipPosition="above" matTooltipShowDelay="300">
       <mat-icon matListItemIcon>savings</mat-icon>
       <div matListItemLine>
         全年现金收入（非合并 - {{ nonMergeTaxCalculationEndDate }}止）
@@ -83,21 +83,21 @@
       </div>
     </mat-list-item>
 
-    <mat-list-item>
+    <mat-list-item matTooltip="全年综合货币收入 = 全年现金收入 + 全年公积金缴纳总额 + 全年企业年金缴纳总额" matTooltipClass="summary-tooltip" matTooltipPosition="above" matTooltipShowDelay="300">
       <mat-icon matListItemIcon>savings</mat-icon>
       <div matListItemLine>全年综合货币收入</div>
       <div matListItemLine class="figure">
-        {{ sum.cashIncome + sum.fullHousingFund | currency }}
+        {{ sum.totalIncome | currency }}
       </div>
     </mat-list-item>
 
-    <mat-list-item>
+    <mat-list-item matTooltip="全年综合货币收入（非合并） = 全年现金收入（非合并） + 全年公积金缴纳总额 + 全年企业年金缴纳总额" matTooltipClass="summary-tooltip" matTooltipPosition="above" matTooltipShowDelay="300">
       <mat-icon matListItemIcon>savings</mat-icon>
       <div matListItemLine>
         全年综合货币收入（非合并 - {{ nonMergeTaxCalculationEndDate }}止）
       </div>
       <div matListItemLine class="figure">
-        {{ sum.cashIncomeDeprecated + sum.fullHousingFund | currency }}
+        {{ sum.totalIncomeDeprecated | currency }}
       </div>
     </mat-list-item>
 
@@ -117,7 +117,7 @@
       </div>
     </mat-list-item>
 
-    <mat-list-item>
+    <mat-list-item matTooltip="全年企业年金缴纳总额 = 全年企业年金个人缴纳总额 + 全年企业年金公司缴纳总额" matTooltipClass="summary-tooltip" matTooltipPosition="above" matTooltipShowDelay="300">
       <mat-icon matListItemIcon>redeem</mat-icon>
       <div matListItemLine>全年企业年金缴纳总额</div>
       <div matListItemLine class="figure">
